@@ -1,0 +1,9 @@
+package App::Charon;
+
+# ABSTRACT: See charon
+
+=head1 STUB
+
+I have to have this because reasons.  See the real doc at L<charon>.
+
+1;
